<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/photo"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/enter_top_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/black"
        android:fontFamily="casual"
        android:text="@string/ic_enter"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="216dp"
        android:fontFamily="sans-serif"
        android:text="@string/ic_welcome"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <TextView
        android:id="@+id/tv_enter_of_register_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/ic_enter_or_register"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.418"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38" />

    <EditText
        android:id="@+id/et_enter_email.center"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:background="@color/white"
        android:hint="@string/ic_enter_email"
        android:paddingVertical="10dp"
        android:layout_marginTop="90dp"
        android:textColor="@color/purple_700"
        android:textColorHint="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_enter_of_register_center"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="491dp" />

    <EditText
        android:id="@+id/et_enter_password_center"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:inputType="textPassword"
        android:hint="@string/ic_enter_password"
        android:paddingVertical="10dp"
        android:textColor="@color/purple_700"
        android:textColorHint="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_enter_email.center" />

    <Button
        android:id="@+id/enter_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/purple_500"
        android:enabled="false"
        android:text="@string/ic_enter_go"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_enter_password_center"/>
<TextView
    android:id="@+id/_forget_password_"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/ic_forget_password"
    android:textColor="@color/white"
    android:textSize="20sp"
    android:layout_marginTop="10dp"
    app:layout_constraintTop_toBottomOf="@+id/enter_button"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_marginStart="80dp"/>

    <TextView
        android:id="@+id/tv_click_hear_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:text="@string/ic_click_hear"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@id/_forget_password_"
        app:layout_constraintTop_toBottomOf="@id/enter_button"/>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="-64dp" />


</androidx.constraintlayout.widget.ConstraintLayout>